# saas

./: .env  .env.dev  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  TODO.md  a8n-tools-specification.md  compose.dev.local.yml  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml  justfile
.forgejo/: debug.yml
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
api/.sqlx/: query-10902dc3a6c49c2c53b7379ba080cf235b6d19f76b6cced1bfdf867e88e38bda.json  query-1a48f615a9c11a4afe334f40490c2dd886e07165253a88a7122439a33ddb9f6b.json  query-20ecf4dc881faf0cd053536d156d3a4fccf462b61964df5d25c2d47f5eeb5b67.json  query-292030b846ba3d44b8079bcb74ea88870e5d9c079b19b6f063f5480442ad9fcc.json  query-3054249db4f467aa0b6a3dd8edff7fd15dc5b5da761d830f7fe15d7e4e94da84.json  query-369a71dadd8f01b8cc0abd907b2cac2612f5bc747b71cbaf19702401bddfed56.json  query-3b6d9f36b583d8da7285d5c2d31e45d27d2d0b4e9554482109b44f93ea6a8803.json  query-42a0489dd8219280c374bc7cbb3e6b23a356d6b99c48b2a7f352a0208a6ab329.json  query-4afb57c30fa842ba8aa73cfc5273b618afcb574d2ac9489b07301d8ac87af00f.json  query-550b6b0e0d658b47ba2fb3668fe451004e62f26d396c5b5e8db6ccec60841f29.json  query-64d70c46e516ea4a6d58890167089b1dae1948169a1cd7c16d2e364f382e193d.json  query-72af5e287f96389920f1c9e80ad374f278325f878dfecd22dfb2415e145e3745.json  query-871e0661848150b5bd4aab57eab4d6528bdcf2885d2414a5d8c78ab0c21db885.json  query-955c14fb19641b7c643688875c944ddb69527a9af68afc11261b81ca184ea611.json  query-b63c6a743c0a24c52ae5ce75002a9bfb7c1ec7ca5ca8019b6f620d81b65e44db.json  query-ba9f2b3bb42c9ccfbfb65596c653a278cc3206cbc71fb34ee5c55178aac246d0.json  query-cd0a3c6bb14dd487434aa00f3d0bd680fc4b6e5cf33688aa288c891199cddf65.json  query-d75a3e00df39aa0c83930a8bf7e8d0ee66b5b00ab906bba6b451896c12eba0b7.json  query-f17c3fc5ce6d1ab7aab9869df12764559aa07f64506e59cdf873c692cbdf5747.json  query-f9b52d4ee7a659ff2d2fb5555ee268999cc88774015986ca1c7fe96ba5df7a51.json  query-fedfe5a3c7336073b758f506d635637b208d26483f0cb88a728dd5f211d1c9c3.json
api/migrations/: 20241230000001_create_users.sql  20241230000002_create_refresh_tokens.sql  20241230000003_create_magic_link_tokens.sql  20241230000004_create_password_reset_tokens.sql  20241230000005_create_subscriptions.sql  20241230000006_create_payment_history.sql  20241230000007_create_applications.sql  20241230000008_seed_applications.sql  20241230000009_create_audit_logs.sql  20241230000010_create_admin_notifications.sql  20241230000011_create_rate_limits.sql  20241230000012_add_membership_tier.sql  20241230000013_create_ip_bans.sql  20241230000014_create_email_change_requests.sql  20241230000015_add_totp_support.sql  20241230000016_create_email_verification_tokens.sql  20241230000017_add_application_subdomain.sql  20260311000018_create_feedback.sql  20260311000019_add_feedback_tags.sql  20260312000020_add_application_webhook_url.sql  20260313000020_add_feedback_archive.sql  20260313000021_add_feedback_attachments.sql  20260316000022_add_application_sort_order.sql  20260318000023_create_admin_invites.sql  20260319000024_create_stripe_config.sql  20260319000025_encrypt_stripe_secrets.sql  20260321000026_add_subscription_tiers.sql  20260323000027_add_key_version.sql  20260324000028_create_invoices.sql  20260324000029_soft_delete_email_unique.sql  20260325000030_add_stripe_payment_method_id.sql  20260326000031_stripe_overhaul.sql  20260327000032_rename_subscription_tiers_remove_membership_tier.sql  20260330000033_fix_missing_membership_status.sql  20260331000034_fix_revoked_membership_slots.sql  20260413000035_create_tier_config.sql  20260414000036_add_stripe_app_tag.sql  20260415000037_add_application_forgejo_config.sql  20260415000038_create_download_cache.sql  20260415000039_create_download_daily_counts.sql  (+15 more)
api/src/: config.rs  errors.rs  lib.rs  main.rs  responses.rs
api/src/errors/: mod.rs  oci.rs
api/src/handlers/: admin.rs  admin_oci.rs  admin_stripe.rs  application.rs  auth.rs  billing.rs  download.rs  feedback.rs  membership.rs  mod.rs  oci_auth.rs  oci_registry.rs  oidc.rs  subscription.rs  totp.rs  user.rs  webhook.rs
api/src/middleware/: auth.rs  auto_ban.rs  mod.rs  oci_auth.rs  oci_www_authenticate.rs  request_id.rs  security_headers.rs
(+315 files in other folders)
