[package]
name = "a8n-api"
version = "0.1.0"
edition = "2021"
authors = ["a8n.tools team"]
description = "Backend API for a8n.tools SaaS platform"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
actix-rt = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
