[package]
name = "a8n-api"
version = "0.1.0"
edition = "2021"
authors = ["a8n.tools team"]
description = "Backend API for a8n.tools SaaS platform"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "ipnetwork"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1"
anyhow = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"

# Cryptography
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# IP address handling
ipnetwork = "0.20"

# Stripe payments
async-stripe = { version = "0.37", features = ["runtime-tokio-hyper"] }

# HMAC for webhook verification
hmac = "0.12"
hex = "0.4"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
tera = "1"

# Lazy static for compile-time statics
lazy_static = "1.4"

[dev-dependencies]
actix-rt = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
