[package]
name = "a8n-api"
version = "0.5.0"
edition = "2021"
authors = ["a8n team"]
description = "Backend API for SaaS platform"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
actix-multipart = "0.7"
futures-util = "0.3"
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-actix-web = "0.7"
thiserror = "1"
anyhow = "1"
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
ipnetwork = "0.20"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
data-encoding = "2"
tera = "1"
lazy_static = "1.4"
url = "2"
urlencoding = "2"
moka = { version = "0.12", features = ["future"] }
tempfile = "3"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.tokio]
version = "1"
features = [
    "full",
    "signal",
]

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "ipnetwork",
    "migrate",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "serde",
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
    "env-filter",
    "json",
]

[dependencies.validator]
version = "0.18"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "stream"]

[dependencies.async-stripe]
version = "0.37"
features = [
    "runtime-tokio-hyper",
    "checkout",
    "billing",
    "webhook-events",
]

[dependencies.totp-rs]
version = "5"
features = [
    "gen_secret",
    "otpauth",
]

[dependencies.lettre]
version = "0.11"
features = [
    "tokio1-native-tls",
    "builder",
]

[dev-dependencies]
actix-rt = "2"
wiremock = "0.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
